Delete dynamic contact form

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 # Site settings
 title: Freelancer
 email: your-email@domain.com
-url: https://example.github.io
+url: "http://127.0.0.1:3001"
+port: 3000
+host:
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-
-# Contact form: comment the line below if you want to stick with the default PHP contact form
-contact: static
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
