--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Freelancer
+title: VerkaDrobka s. r. o.
 email: your-email@domain.com
 url: "http://127.0.0.1:3001"
 port: 3000
 host:
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: Kompletní služby v oboru celní problematiky
 
 color:
-  primary: 18bc9c
+  primary: 05C2FA
   secondary: 2c3e50
   secondary-dark: 233140
 
